--- a/app/src/main/res/layout/activity_confirmar_direccion.xml
+++ b/app/src/main/res/layout/activity_confirmar_direccion.xml
@@ -30,9 +30,7 @@
             android:id="@+id/mapConfirmaUbicacion"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="206dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="@android:dimen/thumbnail_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:context=".ConfirmarDireccion"
