--- a/app/src/main/res/layout/activity_refina_ubicacion.xml
+++ b/app/src/main/res/layout/activity_refina_ubicacion.xml
@@ -25,12 +25,12 @@
         android:id="@+id/aceptarRefinaUbicacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginStart="150dp"
         android:text="Aceptar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="#4f5470"
+        android:background="#82E0AA"
         android:fontFamily="sans-serif"
         android:textColor="@android:color/background_light"
         android:textSize="16sp"/>
