--- a/app/src/main/res/layout/activity_admi_entrar_crear.xml
+++ b/app/src/main/res/layout/activity_admi_entrar_crear.xml
@@ -11,22 +11,46 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="40dp"
+            app:srcCompat="@drawable/logo" />
+
+        <Button
+            android:id="@+id/crear"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:background="#82E0AA"
+            android:radius="50dp"
+            android:text="Crear Cuenta" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="light italic"
+            android:text="¿Ya tienes una cuenta?"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
         <Button
             android:id="@+id/entrar"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="130dp"
-            android:background="#82E0AA"
-            android:text="Iniciar Sesión" />
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="-35dp"
+            android:text="Iniciar Sesión"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
 
-        <Button
-            android:id="@+id/crear"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="100dp"
-            android:background="#82E0AA"
-            android:text="Crear Cuenta" />
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
