--- a/app/src/main/res/layout/activity_buscar_repartidor.xml
+++ b/app/src/main/res/layout/activity_buscar_repartidor.xml
@@ -16,21 +16,21 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img"
-                android:layout_width="70dp"
-                android:layout_height="44dp"
+                android:layout_width="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/sucursal" />
+                app:srcCompat="@drawable/homem" />
 
             <Spinner
                 android:id="@+id/sucursales"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_weight="1" />
 
         </LinearLayout>
@@ -40,22 +40,22 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="70dp"
-                android:layout_height="44dp"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/user2" />
+                app:srcCompat="@drawable/moto" />
 
             <EditText
                 android:id="@+id/repartidor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_weight="1"
-                android:ems="10"
                 android:hint="Nombre del repartidor"
                 android:inputType="textPersonName" />
 
@@ -63,11 +63,11 @@
 
         <Button
             android:id="@+id/buscarRepartidor"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_marginStart="100dp"
             android:layout_marginTop="20dp"
-            android:background="#4f5470"
+            android:background="#82E0AA"
             android:fontFamily="sans-serif"
             android:text="Buscar Repartidor"
             android:textColor="@android:color/background_light"
@@ -86,11 +86,11 @@
 
         <Button
             android:id="@+id/agregarRepartidor"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_marginStart="100dp"
             android:layout_marginTop="20dp"
-            android:background="#4f5470"
+            android:background="#82E0AA"
             android:fontFamily="sans-serif"
             android:text="Agregar Repartidor"
             android:textColor="@android:color/background_light"
