--- a/app/src/main/res/layout/activity_confirmar_direccion.xml
+++ b/app/src/main/res/layout/activity_confirmar_direccion.xml
@@ -38,19 +38,20 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="150dp"
             android:layout_marginTop="10dp"
             android:text="¿Está bien el mapa?" />
 
         <Button
             android:id="@+id/refinarUbicacion"
-            android:layout_width="wrap_content"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="90dp"
             android:layout_marginTop="20dp"
+            android:background="#82E0AA"
             android:text=" ¡Refina tu ubicación!" />
 
         <TextView
@@ -72,6 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
+                android:background="#82E0AA"
+                android:drawableTop="@drawable/homecasa"
                 android:text="Casa" />
 
             <Button
@@ -79,6 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#82E0AA"
+                android:drawableTop="@drawable/oficina"
                 android:text="Oficina" />
 
             <Button
@@ -86,16 +91,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#82E0AA"
+                android:drawableTop="@drawable/homepareja"
                 android:text="Pareja" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/confirmarCambioDireccion"
-            android:layout_width="139dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="110dp"
             android:layout_marginTop="20dp"
+            android:background="#82E0AA"
             android:text="Confirmar" />
 
     </LinearLayout>
