--- a/app/src/main/res/layout/activity_editar_cuenta.xml
+++ b/app/src/main/res/layout/activity_editar_cuenta.xml
@@ -13,14 +13,16 @@
 
         <TextView
             android:id="@+id/textView11"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Ajustes de tu cuenta"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_dark"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="light italic"
+            android:text="Ajuste de tu cuenta"
+            android:textColor="@android:color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,22 +33,22 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/imglogin" />
+                app:srcCompat="@drawable/u" />
 
             <TextView
                 android:id="@+id/bienvenida"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="25dp"
                 android:layout_weight="1"
                 android:text="Hola"
                 android:textAlignment="textStart"
                 android:textAllCaps="true"
                 android:textColor="@android:color/background_dark"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -192,7 +194,7 @@
             android:id="@+id/cerrarSesion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="serif"
             android:text="Cerrar Sesión"
             android:textAlignment="center"
