--- a/app/src/main/res/layout/activity_formulario_empresa.xml
+++ b/app/src/main/res/layout/activity_formulario_empresa.xml
@@ -16,10 +16,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
             android:text="Datos del administrador"
             android:textAlignment="center"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:fontFamily="light italic" />
 
         <EditText
             android:id="@+id/name"
@@ -36,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
+            android:layout_marginTop="5dp"
             android:hint="Apellido Paterno"
             android:inputType="textPersonName" />
 
@@ -45,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
+            android:layout_marginTop="5dp"
             android:hint="Apellido Materno"
             android:inputType="textPersonName" />
 
@@ -53,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:layout_marginTop="5dp"
             android:hint="Sucursal"
             android:inputType="textPersonName" />
 
@@ -67,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginTop="5dp"
                 android:text="¿Tiene más sucursales?" />
 
             <TextView
@@ -74,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginTop="5dp"
                 android:text="Si" />
         </LinearLayout>
 
@@ -83,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
+            android:layout_marginTop="5dp"
             android:hint="Usuario"
             android:inputType="textPersonName" />
 
@@ -92,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:ems="10"
+            android:layout_marginTop="5dp"
             android:hint="Contraseña"
             android:inputType="textPassword" />
 
@@ -100,9 +109,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="130dp"
-            android:background="#4f5470"
+            android:background="#82E0AA"
             android:fontFamily="sans-serif"
-            android:padding="5dp"
+            android:padding="15dp"
+            android:layout_marginTop="-28dp"
             android:text="Crear Cuenta"
             android:textColor="@android:color/background_light"
             android:textSize="16sp" />
