--- a/app/src/main/res/layout/activity_formulario_usuario_nuevo.xml
+++ b/app/src/main/res/layout/activity_formulario_usuario_nuevo.xml
@@ -80,21 +80,11 @@
 
             android:text="Crear cuenta"
             android:textAllCaps="false"
-            android:background="#4f5470"
             android:fontFamily="sans-serif"
+            android:background="#82E0AA"
             android:textColor="@android:color/background_light"
             android:textSize="16sp" />
 
-        <Button
-            android:id="@+id/iniciarSesion"
-            android:layout_width="150dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="120dp"
-            android:background="#4f5470"
-            android:fontFamily="sans-serif"
-            android:text="Iniciar Sesión"
-            android:textAllCaps="false"
-            android:textColor="@android:color/background_light"
-            android:textSize="16sp" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
