--- a/app/src/main/res/layout/activity_hacer_pedido.xml
+++ b/app/src/main/res/layout/activity_hacer_pedido.xml
@@ -13,12 +13,12 @@
 
         <ImageView
             android:id="@+id/imgUser"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/imglogin" />
+            app:srcCompat="@drawable/u" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -32,13 +32,13 @@
                 android:id="@+id/user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="serif-monospace"
-                android:text="Bienvenido Israel"
+                android:text="Bienvenido(a) Israel"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="22sp"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -49,9 +49,10 @@
 
                 <TextView
                     android:id="@+id/textView26"
-                    android:layout_width="100dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginTop="10dp"
                     android:text="Tu dirección"
                     android:textColor="@android:color/background_dark"
                     android:textSize="18sp" />
@@ -76,6 +77,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Sucursal"
                     android:textColor="@android:color/background_dark"
@@ -85,7 +87,8 @@
                     android:id="@+id/sucursales"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="68dp"
                     android:layout_weight="1" />
             </LinearLayout>
 
@@ -99,6 +102,7 @@
                     android:layout_width="172dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="34dp"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Hora de entrega"
@@ -111,6 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginTop="15dp"
                     android:src="@mipmap/ic_access_time_white_24dp"
                     app:layout_constraintHorizontal_bias="0.438"
                     app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
@@ -123,8 +128,8 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginStart="110dp"
+                android:layout_marginTop="170dp"
                 android:text="Total a pagar:"
                 android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
@@ -134,17 +139,18 @@
                 android:id="@+id/pago"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="110dp"
                 android:text="$"
                 android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+
             <Button
                 android:id="@+id/pedir"
                 android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="190dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
                 android:background="#82E0AA"
                 android:fontFamily="sans-serif"
                 android:text="Realizar Pedido"
@@ -164,7 +170,7 @@
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="150dp"
-            android:layout_height="154dp"
+            android:layout_height="180dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="250dp"
             android:layout_weight="1"
@@ -182,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="250dp"
+                android:layout_marginTop="195dp"
                 android:layout_weight="1"
                 android:text="Tortilla"
                 android:textColor="@android:color/background_dark"
@@ -222,8 +228,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:text="Kilos"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <Spinner
@@ -231,6 +240,7 @@
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1" />
             </LinearLayout>
 
