--- a/app/src/main/res/layout/activity_lista_pedidos_por_entregar.xml
+++ b/app/src/main/res/layout/activity_lista_pedidos_por_entregar.xml
@@ -8,27 +8,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="513dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="73dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/listaNotificaciones"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="399dp"
             android:layout_marginLeft="10dp">
 
         </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtPedidos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="130dp"
                 android:text="NO HAY PEDIDOS"
                 android:textAlignment="viewStart"
                 android:textColor="@android:color/background_dark"
@@ -36,10 +38,11 @@
 
             <Button
                 android:id="@+id/cerrarSesion"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="25dp"
+                android:background="#82E0AA"
                 android:text="Cerrar Sesión" />
         </LinearLayout>
 
