--- a/app/src/main/res/layout/activity_listado_pedidos_entregados.xml
+++ b/app/src/main/res/layout/activity_listado_pedidos_entregados.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/pedidos"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="333dp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="55dp">
 
@@ -50,27 +50,22 @@
 
         <Button
             android:id="@+id/buscarOtroRepartidor"
-            android:layout_width="200dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="80dp"
             android:layout_marginTop="15dp"
-            android:text="Buscar otro repartidor"
-            android:background="#4f5470"
-            android:fontFamily="sans-serif"
-            android:textColor="@android:color/background_light"
-            android:textSize="16sp"/>
+            android:background="#82E0AA"
+            android:text="Buscar otro repartidor" />
 
         <Button
             android:id="@+id/cerrarSesion"
-            android:layout_width="200dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="20dp"
-            android:text="Cerrar Sesion"
-            android:background="#4f5470"
-            android:fontFamily="sans-serif"
-            android:textColor="@android:color/background_light"
-            android:textSize="16sp"/>
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:background="#82E0AA"
+            android:text="Cerrar Sesion" />
 
     </LinearLayout>
 
