--- a/app/src/main/res/layout/activity_login_repartidor.xml
+++ b/app/src/main/res/layout/activity_login_repartidor.xml
@@ -13,12 +13,12 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="97dp"
-            android:layout_height="91dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginBottom="50dp"
-            android:layout_marginStart="140dp"
+            android:layout_marginStart="120dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/imglogin" />
+            app:srcCompat="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
                 android:layout_height="54dp"
                 android:layout_marginBottom="20dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/user2" />
+                app:srcCompat="@drawable/u" />
 
             <EditText
                 android:id="@+id/usuario"
@@ -46,7 +46,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -54,7 +54,8 @@
                 android:layout_width="91dp"
                 android:layout_height="44dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/password" />
+                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/key" />
 
             <EditText
                 android:id="@+id/password"
@@ -62,16 +63,18 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:layout_marginTop="10dp"
                 android:hint="Contraseña"
                 android:inputType="textPassword" />
         </LinearLayout>
 
         <Button
             android:id="@+id/entrar"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:background="#4f5470"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="20dp"
+            android:background="#82E0AA"
             android:fontFamily="sans-serif"
             android:text="Entrar"
             android:textColor="@android:color/background_light"
