--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,35 +14,50 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
+        <TextView
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingLeft="115dp"
+            android:textSize="25dp"
+            android:layout_marginTop="40dp"
+            android:textColor="#190707"
+            android:text="Bienvenido(a)" />
+
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="341dp"
-            android:layout_height="363dp"
+            android:layout_width="350dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             app:srcCompat="@drawable/logo" />
-
-        <Button
-            android:id="@+id/entrar"
-            android:layout_width="113dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="130dp"
-            android:layout_marginTop="15dp"
-            android:background="#4f5470"
-            android:fontFamily="sans-serif"
-            android:text="Entrar"
-            android:textColor="@android:color/background_light"
-            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Todo lo que quieras en la puerta de tu casa"
+            android:layout_gravity= "center"
+            android:drawSelectorOnTop="true"
+            android:layout_marginTop="30dp"
+            android:text="Hacemos tu vida más fácil"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="italic" />
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/entrar"
+            android:layout_width="145dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="35dp"
+            android:background="@drawable/boton_redondo"
+            android:fontFamily="sans-serif"
+            android:text="Entrar"
+            android:textColor="@android:color/background_light"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
