--- a/app/src/main/res/layout/activity_pedir_otra_direccion.xml
+++ b/app/src/main/res/layout/activity_pedir_otra_direccion.xml
@@ -43,7 +43,7 @@
                 android:layout_marginStart="50dp"
                 android:layout_weight="1"
                 android:text="Aceptar"
-                android:background="#4f5470"
+                android:background="#82E0AA"
                 android:fontFamily="sans-serif"
                 android:textColor="@android:color/background_light"
                 android:textSize="16sp"/>
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#4f5470"
+            android:background="#82E0AA"
             android:fontFamily="sans-serif"
             android:text="Confirmar"
             android:textColor="@android:color/background_light"
