--- a/app/src/main/res/layout/lista_pedidos.xml
+++ b/app/src/main/res/layout/lista_pedidos.xml
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_weight="1"
-                    android:background="#d6f96d"
+                    android:background="#82E0AA"
                     android:text="Notificar"
                     android:textColor="@android:color/background_dark"
                     android:textSize="16sp" />
