--- a/app/src/main/res/layout/activity_quien_eres.xml
+++ b/app/src/main/res/layout/activity_quien_eres.xml
@@ -8,12 +8,11 @@
     tools:context=".QuienEres">
 
     <LinearLayout
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
+        android:paddingLeft= "16dp"
+        android:paddingRight= "16dp"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/editText"
