--- a/app/src/main/res/layout/activity_formulario_usuario_nuevo.xml
+++ b/app/src/main/res/layout/activity_formulario_usuario_nuevo.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="508dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="3dp">
+        android:layout_marginTop="120dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView5"
@@ -73,11 +73,10 @@
 
         <Button
             android:id="@+id/crearCuenta"
-            android:layout_width="150dp"
-            android:layout_height="35dp"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginStart="120dp"
-
             android:text="Crear cuenta"
             android:textAllCaps="false"
             android:fontFamily="sans-serif"
