--- a/app/src/main/res/layout/activity_quien_eres.xml
+++ b/app/src/main/res/layout/activity_quien_eres.xml
@@ -7,12 +7,12 @@
     android:background="@android:color/background_light"
     tools:context=".QuienEres">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:paddingLeft= "16dp"
         android:paddingRight= "16dp"
-        android:orientation="vertical">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/editText"
@@ -54,8 +54,8 @@
 
         <Button
             android:id="@+id/administrador"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="top|left|right|center_vertical|center_horizontal|fill_horizontal|start|end"
             android:layout_marginLeft="28dp"
             android:layout_marginBottom="30dp"
