--- a/app/src/main/res/layout/activity_hacer_pedido.xml
+++ b/app/src/main/res/layout/activity_hacer_pedido.xml
@@ -148,9 +148,10 @@
 
             <Button
                 android:id="@+id/pedir"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="0dp"
                 android:background="#82E0AA"
                 android:fontFamily="sans-serif"
                 android:text="Realizar Pedido"
